--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -39,6 +39,8 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/Content/Gridmvc.css")
+    @Scripts.Render("~/Scripts/gridmvc.min.js")
     @RenderSection("scripts", required: false)
 </body>
 </html>
